# Pmon

./: .dockerignore  .gitignore  AUDIT_REPORT.md  Dockerfile  Procfile  README.md  create-shortcut.bat  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start-pmon.bat
.github/workflows/: docker-publish.yml
config/: config.example.yaml
docs/: bestbuy-login-walkthrough.md  costco-login-ai-reference.md  target-login-ai-reference.md  walmart-login-ai-reference.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  index.css
pmon/: __init__.py  account_manager.py  auth.py  cli.py  config.py  database.py  engine.py  log_handler.py  models.py  rate_limit.py
pmon/checkout/: __init__.py  api_checkout.py  browser_watcher.py  engine.py  human_behavior.py  network_monitor.py
pmon/checkout_flows/: __init__.py  base.py  bestbuy.py  costco.py  pokemoncenter.py  runner.py  samsclub.py  target.py  walmart.py
pmon/dashboard/: __init__.py  app.py
pmon/login/: __init__.py  base.py  bestbuy.py  costco.py  pokemoncenter.py  runner.py  samsclub.py  target.py  walmart.py
pmon/memory/: __init__.py  navigation_memory.py
pmon/monitors/: __init__.py  amazon.py  base.py  bestbuy.py  bestbuy_search.py  captcha_solver.py  costco.py  pokemoncenter.py  pokemoncenter_search.py  redsky_poller.py  samsclub.py  target.py  walmart.py
scripts/: health_report.py  monitor_control.py
tests/: test_account_isolation.py  test_checkout.py  test_login.py
(+39 files in other folders)
