[project]
name = "pmon"
version = "0.1.0"
description = "Pokemon card stock monitor and auto-checkout bot"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.scripts]
pmon = "pmon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
