[project]
name = "pmon"
version = "0.1.0"
description = "Pokemon card stock monitor and auto-checkout bot"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "aiosqlite>=0.19",
]

[project.scripts]
pmon = "pmon.cli:main"

[tool.setuptools.packages.find]
include = ["pmon*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
